--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "marvel",
+  "homepage": "https://Goncervan.github.io/Marvel/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,7 +23,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false && react-scripts build",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d buld",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
